--- a/css/_alternate.scss
+++ b/css/_alternate.scss
@@ -23,6 +23,7 @@ form.glass-form {
     display: flex;
     flex-direction: column;
     width: 100%;
+    
     // justify-content: space-between;
     // height: 100%;
     // margin-bottom: 2rem;
@@ -48,7 +49,7 @@ form.glass-form {
         padding: 1rem 1rem 0.75rem 1rem;
         border-bottom: 1px solid white;
         color:$offwhite;
-        font-size: 1.25rem;
+        font-size: 1.5rem;
         transition: 0.2s border-color;
     }
 
@@ -82,10 +83,6 @@ form.glass-form {
     color: $redd;
     }
 
-    input[type=submit] {
-        margin-top: 1rem;
-    }
-
 }
 
 .glass-btnGroup {
@@ -103,19 +100,23 @@ form.glass-form {
     background-color: rgba(0,0,0,0);
     border: 1px solid white;
     font-family: $mainFont;
-    color: white;
+    color: $offwhite;
     font-size: 1.25rem;
-    // font-weight: 700;
+    font-weight: 700;
     transition: 0.2s background;
     text-align: center;
     // align-content: center;
     cursor: pointer;
+    text-shadow: 1px 1px 1px rgb(20,20,20);
     text-decoration: none;
-    border-radius: 0.2rem;
+    -webkit-box-shadow: 3px 3px 5px -2px rgba(0,0,0,0.5);
+    -moz-box-shadow: 3px 3px 5px -2px rgba(0,0,0,0.5);
+    box-shadow: 3px 3px 5px -2px rgba(0,0,0,0.5);
+
 }
 
 .glass-btn:hover:not(.btn-disabled) {
-    background-color: rgba(0,0,0,0.2);
+    background-color: rgba(0,0,0,0.4);
 }
 
 .glass-btn-small {
