--- a/views/error404.pug
+++ b/views/error404.pug
@@ -1,16 +1,21 @@
 doctype html
 html(lang="en")
     head
-        title= title
+        title Phrasebook - 404
         meta(name="viewport", content="width-device-width, initial-scale=1")
         link(rel="stylesheet", href= "/css/main.min.css", type="text/css")
         link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
         link(rel="icon", type="image/x-icon", href="/assets/favicon.png")
-    body.loginPage
+    body.errorPage
         // include sidebar.pug
         main
-            h2.infoMessage= msg
-            a(href= redirect).glass-btn= button
+            div.loginBlock
+                div.formTitle
+                    div.logo
+                        img(src="https://dcatcher.me/assets/404.svg" alt="Phrasebook logo").logo
+                h1 Oops! Looks like you've gotten lost!
+                a(href="/phrasebook").glass-btn Lets get back home!
+
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
         script(src="/js/dropdown.js")
