--- a/views/login.pug
+++ b/views/login.pug
@@ -6,64 +6,35 @@ html(lang="en")
         link(rel="stylesheet", href= "/css/main.min.css", type="text/css")
         link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
         link(rel="icon", type="image/x-icon", href="/assets/favicon.png")
-    body.loginPage
-        //- div.overlay
-        //-     i(class="fa fa-spinner fa-pulse fa-3x fa-fw loading-icon")
-        //- div.userOverlay
-        //-     img.userIcon
-        //-     h2 Welcome!
-        //- // include sidebar.pug
+    body.loginPage.logReg
+        nav
+            a(href="/phrasebook")
+                i.fa.fa-fw.fa-chevron-left
+                span Back home
+            div
+                span Not a member?
+                a(href="register") Sign up
         main.noSidebar
             div.loginBlock
-                div.formTitle 
-                    img(src="https://dcatcher.me/assets/logo-col.svg" alt="Phrasebook logo").logo
+                div.formTitle
+                    div.logo
+                        include /var/www/html/assets/logo-col.svg
+                    //- img(src="https://dcatcher.me/assets/logo-col.svg" alt="Phrasebook logo").logo
                 form.glass-form.login-form(method="post", action="login")
-                    div.errorMessage
-                    
-                    input(type='text', placeholder='Username', name='username', id="username")
-                    input(type='password', placeholder='Password', name='password', id="password")
+                    if error
+                        div.errorMessage
+                            i.fa.fa-fw.fa-exclamation
+                            span= error
+                    div.loginContainer
+                        label Username
+                        input(type='text', placeholder='', name='username', id="username").login
+                    div.loginContainer
+                        label Password
+                        input(type='password', placeholder='', name='password', id="password").login
                     input(type='submit', class='glass-btn', value="Login", id="loginButton")
-                    a(href="register", class='glass-btn') 
-                        span Not got an account? Register!
 
             // h2 Hello world!
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
         script(src="/js/dropdown.js")
-        //- script.
-        //- // Animate the login-form. (TODO: Check if this really is a little... overkill?)
-        //-     $(".login-form").submit(function(event) {
-        //-         $("main").fadeOut("fast", function() {
-        //-             $(".overlay").css({
-        //-                 display: "flex",
-        //-                 opacity: 0
-        //-             });
-        //-             $(".overlay").animate({opacity: 1}, 500);
-        //-             $.post("login", {username: $("#username").val(), password: $("#password").val()}, function(data, status, jqXHR) {
-        //-                 if (data.type == "success") {
-        //-                     $(".userIcon").attr("src", data.icon)
-        //-                     $(".userOverlay h2").text("Welcome " + data.name + "!");
-        //-                     $(".overlay").fadeOut(function () {
-        //-                         $(".userOverlay").css({
-        //-                             display: "flex",
-        //-                             opacity: 0
-        //-                         });
-        //-                         $(".userOverlay").animate({opacity: 1}, 1000);
-        //-                         setTimeout(function(){
-        //-                             $("body").fadeOut(function() {
-        //-                                 window.location.replace("app");
-        //-                             });
-        //-                         }, 1000);
-        //-                     });
-        //-                 } else {
-        //-                     // User not logged in!
-        //-                     $(".errorMessage").text("Invalid username or password!");
-        //-                     $(".overlay").fadeOut(1000, function() {
-        //-                         $("main").fadeIn("slow");
-        //-                     });
-        //-                 }
-        //-             });
-        //-         });
-        //-         event.stopPropagation();
-        //-         return false;
-        //-     });
+        script(src="/js/labels.js")
