--- a/views/register.pug
+++ b/views/register.pug
@@ -6,12 +6,21 @@ html(lang="en")
         link(rel="stylesheet", href= "/css/main.min.css", type="text/css")
         link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
         link(rel="icon", type="image/x-icon", href="/assets/favicon.png")
-    body.registerPage
-        // include sidebar.pug
+    body.registerPage.logReg
+        nav
+            a(href="/phrasebook")
+                i.fa.fa-fw.fa-chevron-left
+                span Back home
+            div
+                span Already a member?
+                a(href="login") Log in
+
         main.noSidebar
             div.loginBlock
                 div.formTitle
-                    img(src="https://dcatcher.me/assets/logo-col.svg", alt="Phrasebook logo").logo
+                    div.logo
+                        include /var/www/html/assets/logo-col.svg
+                    //- img(src="https://dcatcher.me/assets/logo-col.svg", alt="Phrasebook logo").logo
                 form(class='glass-form', action='register', method='post')
                     if error
                         div.errorMessage= error
@@ -26,8 +35,6 @@ html(lang="en")
                     input(type='password', placeholder='Password', name='password', required)
                     input(type='password', placeholder='Confirm Password', name='confirmpassword', required)
                     input(type='submit', class='glass-btn', value="Register")
-                    a(href="login", class='glass-btn')
-                        span Already got an account? Login!
             // h2 Hello world!
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
