--- a/views/error404.pug
+++ b/views/error404.pug
@@ -14,7 +14,7 @@ html(lang="en")
                     div.logo
                         img(src="https://dcatcher.me/assets/404.svg" alt="Phrasebook logo").logo
                 h1 Oops! Looks like you've gotten lost!
-                a(href="/phrasebook").glass-btn Lets get back home!
+                a(href=constants.URL).glass-btn Lets get back home!
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
