--- a/views/notloggedin.pug
+++ b/views/notloggedin.pug
@@ -13,10 +13,10 @@ html(lang="en")
                 span Phrasebook
             div.bg
                 div.links
-                    a(href="/phrasebook/login") Get Started
+                    a(href=constants.URL +"../login") Get Started
         div.header
         header
-            a(href="/phrasebook/login").mainButton Get Started
+            a(href=constants.URL + "/login").mainButton Get Started
         main(style="height: 200vh")
 
 
