--- a/views/categories.pug
+++ b/views/categories.pug
@@ -19,7 +19,7 @@ html(lang="en")
                 ul.categoryList
                     each category in s.categories
                         li
-                            a(href="/phrasebook/app/category?c=" + category._id)
+                            a(href=constants.URL + "/app/category?c=" + category._id)
                                 span.name= category.name
                                 span.padding
                                 if (category.pinned)
@@ -28,7 +28,7 @@ html(lang="en")
                                 span.short= category.shortened
                                 span.num-badge= category.words
                     li
-                        a(href="/phrasebook/app/category/new").addNew
+                        a(href=constants.URL + "/app/category/new").addNew
                             span.name Add new
                             span.short +
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
