--- a/views/firstlogin.pug
+++ b/views/firstlogin.pug
@@ -17,14 +17,14 @@ html(lang="en")
                             span Welcome to Phrasebook!
                             span.subtext Please choose a language to start collecting.
                         div.buttons
-                            a(href="/phrasebook/logout").button.bgRed
+                            a(href=constants.URL +"/logout").button.bgRed
                                 i(class="fa fa-fw fa-sign-out")
                                 span Logout
                     else
                         span.mainTitle
                             i(class="fa fa-fw fa-plus")
                             span Add a new Language
-            form(method="post", action="/phrasebook/app/newlanguage").invisible-form
+            form(method="post", action=constants.URL +"/app/newlanguage").invisible-form
                 div.content-language-select
                     div.language-selector
                         each lang in allLangs
