--- a/views/register.pug
+++ b/views/register.pug
@@ -8,7 +8,7 @@ html(lang="en")
         link(rel="icon", type="image/x-icon", href="/assets/favicon.png")
     body.registerPage.logReg
         nav
-            a(href="/phrasebook")
+            a(href=constants.URL)
                 i.fa.fa-fw.fa-chevron-left
                 span Back home
             div
