--- a/views/settings.pug
+++ b/views/settings.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
     head
         title= title
-        link(rel="stylesheet", href= "/css/main.min.css", type="text/css")
+        link(rel="stylesheet", href= "/assetspb" + constants.URL + "/css/main.min.css", type="text/css")
         meta(name="viewport", content="width-device-width, initial-scale=1")
         meta(name="theme-color", content="#188bee")
         link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
