--- a/views/allwords.pug
+++ b/views/allwords.pug
@@ -48,7 +48,7 @@ html(lang="en")
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
-        script(src="/js/dropdown.js")
-        script(src="/js/comma.js")
-        script(src="/js/search.js")
-        script(src="/js/sidebar.js")
+        script(src="/assetspb" + constants.URL + "/js/dropdown.js")
+        script(src="/assetspb" + constants.URL + "/js/comma.js")
+        script(src="/assetspb" + constants.URL + "/js/search.js")
+        script(src="/assetspb" + constants.URL + "/js/sidebar.js")
