--- a/views/categories.pug
+++ b/views/categories.pug
@@ -33,5 +33,5 @@ html(lang="en")
                             span.short +
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
-        script(src="/js/dropdown.js")
-        script(src="/js/sidebar.js")
+        script(src="/assetspb" + constants.URL + "/js/dropdown.js")
+        script(src="/assetspb" + constants.URL + "/js/sidebar.js")
