--- a/views/notloggedin.pug
+++ b/views/notloggedin.pug
@@ -22,7 +22,7 @@ html(lang="en")
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
-        script(src="/js/dropdown.js")
+        script(src="/assetspb" + constants.URL + "/js/dropdown.js")
         script(type="text/javascript").
             console.log($(".nav").outerHeight());
             var header = $('header').height() - $(".nav").outerHeight() ;
