--- a/views/register.pug
+++ b/views/register.pug
@@ -38,4 +38,4 @@ html(lang="en")
             // h2 Hello world!
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
-        script(src="/js/dropdown.js")
+        script(src="/assetspb" + constants.URL + "/js/dropdown.js")
