--- a/views/error404.pug
+++ b/views/error404.pug
@@ -3,7 +3,7 @@ html(lang="en")
     head
         title Phrasebook - 404
         meta(name="viewport", content="width-device-width, initial-scale=1")
-        link(rel="stylesheet", href= "/assetspb" + constants.URL + "/css/main.min.css", type="text/css")
+        link(rel="stylesheet", href= "https://dcatcher.me/assetspb" + constants.URL + "/css/main.min.css", type="text/css")
         link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
         link(rel="icon", type="image/x-icon", href="/assets/favicon.png")
     body.errorPage
@@ -18,4 +18,4 @@ html(lang="en")
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
-        script(src="/assetspb" + constants.URL + "/js/dropdown.js")
+        script(src="https://dcatcher.me/assetspb" + constants.URL + "/js/dropdown.js")
