--- a/views/categories.pug
+++ b/views/categories.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
     head
         title= title
-        link(rel="stylesheet", href= "/assetspb" + constants.URL + "/css/main.min.css", type="text/css")
+        link(rel="stylesheet", href= "https://dcatcher.me/assetspb" + constants.URL + "/css/main.min.css", type="text/css")
         meta(name="viewport", content="width-device-width, initial-scale=1")
         meta(name="theme-color", content="#188bee")
         link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
@@ -19,7 +19,7 @@ html(lang="en")
                 ul.categoryList
                     each category in s.categories
                         li
-                            a(href=constants.URL + "/app/category?c=" + category._id)
+                            a(href=constants.URL + "/category?c=" + category._id)
                                 span.name= category.name
                                 span.padding
                                 if (category.pinned)
@@ -28,10 +28,10 @@ html(lang="en")
                                 span.short= category.shortened
                                 span.num-badge= category.words
                     li
-                        a(href=constants.URL + "/app/category/new").addNew
+                        a(href=constants.URL + "/category/new").addNew
                             span.name Add new
                             span.short +
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
-        script(src="/assetspb" + constants.URL + "/js/dropdown.js")
-        script(src="/assetspb" + constants.URL + "/js/sidebar.js")
+        script(src="https://dcatcher.me/assetspb" + constants.URL + "/js/dropdown.js")
+        script(src="https://dcatcher.me/assetspb" + constants.URL + "/js/sidebar.js")
