--- a/views/category.pug
+++ b/views/category.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
     head
         title= title
-        link(rel="stylesheet", href= "/assetspb" + constants.URL + "/css/main.min.css", type="text/css")
+        link(rel="stylesheet", href= "https://dcatcher.me/assetspb" + constants.URL + "/css/main.min.css", type="text/css")
         meta(name="viewport", content="width-device-width, initial-scale=1")
         meta(name="theme-color", content="#188bee")
         link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
@@ -18,12 +18,12 @@ html(lang="en")
                         span.padding
                         span.num-badge= words.length
                     div.buttons
-                        a(href=constants.URL +"/app/words/new?c=" + current._id).button Add new word
+                        a(href=constants.URL +"/words/new?c=" + current._id).button Add new word
                         if (current.pinned)
-                            a(href=constants.URL +"/app/category/pin?c=" + current._id).button.pinned
+                            a(href=constants.URL +"/category/pin?c=" + current._id).button.pinned
                                 i.fa.fa-fw.fa-circle
                         else
-                            a(href=constants.URL +"/app/category/pin?c=" + current._id + "&p=true").button.pin
+                            a(href=constants.URL +"/category/pin?c=" + current._id + "&p=true").button.pin
                                 i.fa.fa-fw.fa-thumb-tack.fa-rotate-45
                         form(onkeypress="return event.keyCode != 13;").searchBox
                             input(type="hidden", id="username", value= s.username)
@@ -52,7 +52,7 @@ html(lang="en")
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
-        script(src="/assetspb" + constants.URL + "/js/dropdown.js")
-        script(src="/assetspb" + constants.URL + "/js/search.js")
-        script(src="/assetspb" + constants.URL + "/js/comma.js")
-        script(src="/assetspb" + constants.URL + "/js/sidebar.js")
+        script(src="https://dcatcher.me/assetspb" + constants.URL + "/js/dropdown.js")
+        script(src="https://dcatcher.me/assetspb" + constants.URL + "/js/search.js")
+        script(src="https://dcatcher.me/assetspb" + constants.URL + "/js/comma.js")
+        script(src="https://dcatcher.me/assetspb" + constants.URL + "/js/sidebar.js")
