--- a/views/notloggedin.pug
+++ b/views/notloggedin.pug
@@ -3,7 +3,7 @@ html(lang="en")
     head
         title= title
         meta(name="viewport", content="width-device-width, initial-scale=1")
-        link(rel="stylesheet", href= "/assetspb" + constants.URL + "/css/index.min.css", type="text/css")
+        link(rel="stylesheet", href= "https://dcatcher.me/assetspb" + constants.URL + "/css/index.min.css", type="text/css")
         link(rel="stylesheet", href= "https://use.fontawesome.com/1b61713aa1.css", type="text/css")
         link(rel="icon", type="image/x-icon", href="/assets/favicon.png")
     body.mainPage
@@ -22,7 +22,7 @@ html(lang="en")
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
-        script(src="/assetspb" + constants.URL + "/js/dropdown.js")
+        script(src="https://dcatcher.me/assetspb" + constants.URL + "/js/dropdown.js")
         script(type="text/javascript").
             console.log($(".nav").outerHeight());
             var header = $('header').height() - $(".nav").outerHeight() ;
