more progress modularizing

--- a/views/category.pug
+++ b/views/category.pug
@@ -40,7 +40,7 @@ html(lang="en")
                         h1 English
                 div(class="wbadd").wordBlock
                     span.addnew
-                        a(href=constants.URL +"/app/words/new?c=" + current._id) Add new
+                        a(href=constants.URL +"/words/new?c=" + current._id) Add new
                             i.fa.fa-fw.fa-plus
                             //- span Add new
                 div.allWords
