--- a/css/main.scss
+++ b/css/main.scss
@@ -1036,6 +1036,7 @@ div.errorMessage {
     }
 }
 
+
 .wbadd {
     display: none;
 }
@@ -1051,6 +1052,11 @@ div.errorMessage {
         font-weight: 600;
     }
 }
+
+.wordBlock:nth-child(2n+1):not(.wbtitle) {
+    background-color: #e9e9e9;
+}
+
 
 .wordBlock:last-child {
     border-bottom: 1px solid $bordercolor;
