--- a/views/newword.pug
+++ b/views/newword.pug
@@ -17,13 +17,13 @@ html(lang="en")
                         span= maintitle
             div.content
                 //- h1= message
-                form(action=constants.URL +"/app/words/new", method="post").appForm
+                form(action=constants.URL +"/words/new", method="post").appForm
                     label(for="word") Word
-                    input(type="text", name="word" required autofocus)
+                    input(type="text", name="word" required autofocus autocomplete="off")
                     input(type="hidden", value= categoryID, name="categoryID")
                     input(type="hidden", value= categoryName, name="categoryName")
                     label(for="translations") Translation(s) - Separated by commas.
-                    input(type="text", name="translations" required)
+                    input(type="text", name="translations" required autocomplete="off")
                     input(type="submit", value="Add new word").bgPrimary
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
