--- a/views/sidebar.pug
+++ b/views/sidebar.pug
@@ -131,3 +131,5 @@ nav.sideBarMOB
         li
             a(href=constants.URL + "/logout")
                 i(class="fa fa-fw fa-sign-out")
+
+div(style="display: none;")#constantsURL= constants.URL;
