--- a/views/sidebar.pug
+++ b/views/sidebar.pug
@@ -132,4 +132,4 @@ nav.sideBarMOB
             a(href=constants.URL + "/logout")
                 i(class="fa fa-fw fa-sign-out")
 
-div(style="display: none;")#constantsURL= constants.URL;
+div(style="display: none;", id="constantsURL")= constants.URL;
