--- a/views/sidebar.pug
+++ b/views/sidebar.pug
@@ -11,7 +11,7 @@ div.language-picker
                         img(src="//dcatcher.me/assets/" + val.shortened + ".svg").language-icon
 
 nav.sidebar(class=s.sidebar === "small" ? "small" : "")
-    div(style="display: none;", id="constantsURL")= constants.URL;
+    div(style="display: none;", id="constantsURL")= constants.URL
     div.user-section
         ul.section
             li.drop
