--- a/views/allwords.pug
+++ b/views/allwords.pug
@@ -33,7 +33,7 @@ html(lang="en")
                             h1 English
                         span.padding
                         span.category
-                            h1 Category
+                            h1#categoryRequired Category
                     div.allWords
                         each val in words
                             div.wordBlock
