css fix on initial login

--- a/css/main.scss
+++ b/css/main.scss
@@ -132,6 +132,12 @@ main:not(.noSidebar), .invisible-form {
     box-shadow: 0 4px 8px 6px rgba(0, 0, 0, 0.2);
 }
 
+main.noSidebar {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 
 
 .sideBarMOB {
