--- a/css/main.scss
+++ b/css/main.scss
@@ -613,6 +613,12 @@ div.submit-section {
         border-radius: 0.5rem;
         border-bottom-left-radius: 0;
         cursor: pointer;
+        box-shadow: 3px 3px 5px -2px rgba(0,0,0,0.5);
+    }
+
+    .button-save:hover {
+        box-shadow: 5px 5px 5px -2px rgba(0,0,0,0.5);
+        background-color: darken($orang, 5%);
     }
 }
 
