--- a/css/main.scss
+++ b/css/main.scss
@@ -614,11 +614,12 @@ div.submit-section {
         border-bottom-left-radius: 0;
         cursor: pointer;
         box-shadow: 3px 3px 5px -2px rgba(0,0,0,0.5);
+        transition: background-color 0.2s;
     }
 
     .button-save:hover {
         box-shadow: 5px 5px 5px -2px rgba(0,0,0,0.5);
-        background-color: darken($orang, 5%);
+        background-color: darken($orang, 10%);
     }
 }
 
