--- a/views/firstlogin.pug
+++ b/views/firstlogin.pug
@@ -24,7 +24,7 @@ html(lang="en")
                         span.mainTitle
                             i(class="fa fa-fw fa-plus")
                             span Add a new Language
-            form(method="post", action=constants.URL +"/newlanguage").invisible-form
+            form(method="post", action=constants.URL +"/language/new").invisible-form
                 div.content-language-select
                     div.language-selector
                         each lang in allLangs
