--- a/views/category.pug
+++ b/views/category.pug
@@ -49,6 +49,12 @@ html(lang="en")
                             span.lang= val.word
                             span.padding
                             span.english= val.translations
+                            span.padding
+                            span.starred
+                              if val.starred
+                                i(style="color: yellow").fa.fa-fw.fa-star
+                              else
+                                i(style="color: #999999").fa.fa-fw.fa-star
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
