--- a/css/main.scss
+++ b/css/main.scss
@@ -1050,6 +1050,10 @@ div.errorMessage {
         width: 100%;
         flex: 1;
     }
+
+    .starred {
+        font-size: 1.25rem;
+    }
 }
 
 
