--- a/views/category.pug
+++ b/views/category.pug
@@ -38,6 +38,9 @@ html(lang="en")
                     span.padding
                     span.english
                         h1 English
+                    span.padding
+                    span.starred
+                        i(style="").fa.fa-fw.fa-star
                 div(class="wbadd").wordBlock
                     span.addnew
                         a(href=constants.URL +"/words/new?c=" + current._id) Add new
