--- a/views/category.pug
+++ b/views/category.pug
@@ -55,7 +55,7 @@ html(lang="en")
                             span.padding
                             span.starred
                               if val.starred
-                                i(style="color: yellow").fa.fa-fw.fa-star
+                                i(style="color: #ff9000").fa.fa-fw.fa-star
                               else
                                 i(style="color: #999999").fa.fa-fw.fa-star
 
