--- a/views/category.pug
+++ b/views/category.pug
@@ -55,9 +55,9 @@ html(lang="en")
                             span.padding
                             span.starred
                               if val.starred
-                                i(style="color: #ff9000").fa.fa-fw.fa-star
+                                i.fa.fa-fw.fa-star.star-on
                               else
-                                i(style="color: #999999").fa.fa-fw.fa-star
+                                i.fa.fa-fw.fa-star.star-off
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
@@ -65,3 +65,4 @@ html(lang="en")
         script(src="https://dcatcher.me/assetspb" + constants.URL + "/js/search.js")
         script(src="https://dcatcher.me/assetspb" + constants.URL + "/js/comma.js")
         script(src="https://dcatcher.me/assetspb" + constants.URL + "/js/sidebar.js")
+        script(src="https://dcatcher.me/assetspb" + constants.URL + "/js/starred.js")
