--- a/css/main.scss
+++ b/css/main.scss
@@ -1034,6 +1034,15 @@ div.errorMessage {
     .lang {
         width: 100%;
         flex: 1;
+
+        input {
+            padding: 0.25rem 0.5rem;
+            font-size: 1.25rem;
+            font-family: $mainFont;
+            font-weight: 600;
+            margin-left: -0.5rem;
+            border: 1px solid $bordercolorDarker;
+        }
     }
 
     .padding {
@@ -1044,6 +1053,15 @@ div.errorMessage {
     .english {
         width: 100%;
         flex: 1;
+
+        input {
+            padding: 0.25rem 0.25rem;
+            font-size: 1.25rem;
+            font-family: $mainFont;
+            margin-left: -0.5rem;
+            border: 1px solid $bordercolorDarker;
+
+        }
     }
 
     .category {
@@ -1071,6 +1089,21 @@ div.errorMessage {
             // color: #ff9000;
         }
     }
+
+    .edit {
+        font-size: 1.25rem;
+        i {
+            cursor: pointer;
+        }
+
+        i.editing {
+            color: green;
+        }
+    }
+}
+
+.wordBlock.editing {
+    background-color: #999;
 }
 
 
@@ -1093,7 +1126,7 @@ div.errorMessage {
     }
 }
 
-.wordBlock:nth-child(2n+1):not(.wbtitle) {
+.wordBlock:nth-of-type(2n+1):not(.wbtitle) {
     background-color: #e9e9e9;
 }
 
