--- a/views/category.pug
+++ b/views/category.pug
@@ -57,11 +57,11 @@ html(lang="en")
                             span.padding
                             span.starred
                               if val.starred
-                                i.fa.fa-fw.fa-star.star-on
+                                i(title="Toggle starred word.").fa.fa-fw.fa-star.star-on
                               else
                                 i.fa.fa-fw.fa-star.star-off
                             span.edit
-                                i.fa.fa-fw.fa-pencil
+                                i(title="Toggle starred word.").fa.fa-fw.fa-pencil
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/external/jquery/jquery.js")
