--- a/views/sidebar.pug
+++ b/views/sidebar.pug
@@ -22,19 +22,23 @@ nav.sidebar(class=s.sidebar === "small" ? "small" : "")
                     span= `${u.firstname} ${u.lastname.substring(0, 1)}.`
                     span.sticky-push
                     img(class="rot arrow", src="//dcatcher.me/testing/sidebar/downarrow.svg", alt="toggle")
-        ul.dropdown-elements
-            //- li(class="hide hidden")
-            //-     a(href="#")
-            //-         i(class="fa fa-fw fa-user")
-            li(class="hide hidden")
-                a(href=constants.URL + "/settings")
-                    i(class="fa fa-fw fa-cog")
-            li(class="hide hidden")
-                a(href=constants.URL + "/logout").logout
-                    i(class="fa fa-fw fa-sign-out")
+        //- ul.dropdown-elements
+        //-     //- li(class="hide hidden")
+        //-     //-     a(href="#")
+        //-     //-         i(class="fa fa-fw fa-user")
+        //-     li(class="hide hidden")
+        //-         a(href=constants.URL + "/settings")
+        //-             i(class="fa fa-fw fa-cog")
+        //-     li(class="hide hidden")
+        //-         a(href=constants.URL + "/logout").logout
+        //-             i(class="fa fa-fw fa-sign-out")
 
     ul.main
-        li.navSubheading Main
+        //- li.navSubheading Main
+        li
+            a(href=constants.URL)
+                i(class="fa fa-fw fa-home")
+                b Menu
         li
             if (selected == "overview")
                 a(href=constants.URL).active
@@ -44,7 +48,6 @@ nav.sidebar(class=s.sidebar === "small" ? "small" : "")
                 a(href=constants.URL)
                     i(class="fa fa-fw fa-home")
                     span Overview
-
         li
             if (selected == "allwords")
                 a(href=constants.URL + "/words/all").active
@@ -55,7 +58,7 @@ nav.sidebar(class=s.sidebar === "small" ? "small" : "")
                     i(class="fa fa-fw fa-clock-o")
                     span All Words
     ul.categories
-        li.navSubheading Categories
+        //- li.navSubheading Categories
         each category in s.categories
             if (category.pinned)
                 li
@@ -93,7 +96,7 @@ nav.sidebar(class=s.sidebar === "small" ? "small" : "")
                     span Add new
     div.sticky-push
     ul.languages.dropDown
-        li.navSubheading Language
+        //- li.navSubheading Language
         li
             a(href="#",id="language-change-link").currentlanguage
                 img(class="languageIcon", src="//dcatcher.me/assets/" + s.currentlanguage.shortened + ".svg", alt="current language")
